syntax = "proto3";
option java_multiple_files = true;
package net.alphos.api.grpc.services.nlp;

message TokenizeRequest {
  repeated string sentences = 1;
}

message TokenizeResponse {
  repeated string tokens = 1;
  string message = 2;
  bool success = 3;
}

service TokenizerService {
  rpc tokenize(TokenizeRequest) returns (TokenizeResponse);
}